# plugin-output-processing

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  deploy.sh  pyproject.toml  start_pop.sh
docker/: Dockerfile  compose.yaml  entrypoint_api.sh  log_conf.yaml  start_pop.sh
docker/curl-jq/: Dockerfile
plugin_output_processing/: processor.py  settings.py
scripts/: build.sh  pop.sh  push.sh
src/plugin_output_processing/: api.py  globals.py  processor.py  provider.py  settings.py
src/plugin_output_processing/providers/: __init__.py  base.py  ollama.py  openai.py
src/pop/: __init__.py  api.py  globals.py  logger.py  processor.py  settings.py
src/pop/providers/: __init__.py  base.py  ollama.py  openai.py
